[tool.poetry]
name = "cqsim"
version = "0.1.0"
description = ""
authors = ["百地 希留耶 <65301509+kiruyamomochi@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.6.0"
pandas = "^2.0.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
